--- a/Dockerfile.preclone
+++ b/Dockerfile.preclone
@@ -36,3 +36,14 @@ run  apt-get install git -y
 run  curl https://raw.github.com/isaacs/nave/master/nave.sh > /bin/nave && chmod a+x /bin/nave
 run  nave usemain 0.8
 
+# divert upstart (required for mongo to work)
+# from https://www.nesono.com/node/368
+run  dpkg-divert --local --rename --add /sbin/initctl
+run  ln -s /bin/true /sbin/initctl
+
+#  mongodb repos
+run  echo 'deb http://downloads-distro.mongodb.org/repo/ubuntu-upstart dist 10gen' > /etc/apt/sources.list.d/10gen.list
+run  apt-key adv --keyserver keyserver.ubuntu.com --recv 7F0CEB10
+run  apt-get update
+run  apt-get install mongodb-10gen -y
+
