--- a/Dockerfile.base
+++ b/Dockerfile.base
@@ -3,11 +3,8 @@
 from  strider/strider:preclone
 maintainer  Jared Forsyth <jared@jaredforsyth.com>
 
-# grab strider
-run  git clone https://github.com/Strider-CD/strider.git /src
-
 # update to Strider Version 1.3.5
-run  cd /src && git pull && git reset --hard 1.3.5
+run  git clone https://github.com/Strider-CD/strider.git /src && cd /src && git reset --hard 1.3.5
 
 # Install app dependencies
 run  cd /src; npm install
